PYIC-3853: code refactor according code reviews